force-app/main/default/objects/PDRI__Release_Bundle_Relationship__c/PDRI__Release_Bundle_Relationship__c.object-meta.xml
<CustomObject>
    <label>Release Bundle Relationship</label>
    <nameField>
        <displayFormat>RBR-{0000}</displayFormat>
        <label>Release Bundle Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Bundle Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>