force-app/main/default/objects/PDRI__Release_Bundle_Relationship__c/fields/PDRI__Deployment_Bundle__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Bundle__c</fullName>
    <label>Deployment Bundle</label>
    <referenceTo>PDRI__Deployment_Bundle__c</referenceTo>
    <relationshipLabel>Release Bundle Relationships</relationshipLabel>
    <relationshipName>Release_Bundle_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>