force-app/main/default/objects/PDRI__Release_Bundle_Relationship__c/fields/PDRI__Deployment_Order__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Deployment_Order__c</fullName>
    <label>Deployment Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>