force-app/main/default/objects/PDRI__Release_Bundle_Relationship__c/fields/PDRI__Release__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Release__c</fullName>
    <label>Release</label>
    <referenceTo>PDRI__Release__c</referenceTo>
    <relationshipLabel>Release Bundle Relationships</relationshipLabel>
    <relationshipName>Release_Bundle_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>